[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Jithish J <135303624+jithsg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
requests = "^2.31.0"
pandas = "^2.1.4"
pyarrow = "^14.0.2"
fastparquet = "^2023.10.1"
tqdm = "^4.66.1"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
xgboost = "^2.0.3"
lightgbm = "^4.2.0"
optuna = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"

[tool.poetry.group.docs.dependencies]
sphinx = "^4.2.0"

[tool.poetry.group.docs]
optional = true



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
